--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,10 @@ jobs:
       packages: write
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
     - name: Import GPG key
       uses: crazy-max/ghaction-import-gpg@v6
