--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,14 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Build Lint
-        run: ./gradlew lintDebug
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: lint
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: lintDebug
+          build-root-directory: ./
 
   test:
     needs: [lint]
