--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -27,13 +27,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WalletSdk"
+        android:theme="@style/Theme.MobileSdk"
         tools:targetApi="31">
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.WalletSdk">
+            android:theme="@style/Theme.MobileSdk">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
