--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,5 @@ $RECYCLE.BIN/
 !gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,linux,macos,windows,android,intellij,androidstudio
+
+kls_database.db
